# VektorDB

./: .gitignore  CMakeLists.txt  Documentation.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt
benchmarks/math/: bench_distance.cpp
include/vektordb/core/: platform.h  types.h  vektor_db.h
include/vektordb/index/: hnsw.h
include/vektordb/math/: distance.h  scalar_ops.h  simd_ops.h
include/vektordb/search/: flat_search.h
include/vektordb/storage/: mmap_file.h  vector_store.h
src/: main.cpp
src/core/: vektor_db.cpp
src/index/: hnsw.cpp
src/math/: distance.cpp  scalar_ops.cpp  simd_ops.cpp
src/search/: flat_search.cpp
src/storage/: mmap_file.cpp  vector_store.cpp
tests/: CMakeLists.txt
tests/index/: test_hnsw.cpp
tests/math/: test_distance.cpp
tests/search/: test_flat_search.cpp
tests/storage/: test_storage.cpp
